--- a/froyo.html
+++ b/froyo.html
@@ -8,7 +8,7 @@
     <link rel="about_page" href="froyo_about.html">
     <link rel="menu_page" href="froyo_menu.html">
     <link rel="contact_page" href="froyo_contact.html">
-    <script src="froyo1.js"></script>
+    <script src="froyo.js"></script>
 </head>
 <body class="backimage">
     <main>
@@ -23,13 +23,5 @@
                 <a class="navitem" href="./froyo_contact.html">CONTACT</a>
             </div>
         </section>
-        <!-- <section class = "main_page"> -->
-            <!-- <p>Please enter enter a list of comma-separated froyo flavors:</p> -->
-            <!-- <form onsubmit="someFunction()"> -->
-                <!-- <label for="order">Order</label> -->
-                <!-- <input type="text" class="username" value=""> -->
-            <!-- </form> -->
-            <!-- <button type="button" onclick="myFunction()">Order placed</button>  -->
-        <!-- </section> -->
     </main>
 </html>
